# SMEF

./: .gitignore  3.0.2  CHANGELOG.md  ConnectionsSettings.py  CustomPlot.py  GeneratorSettings.py  NewSession.py  README.html  README.md  SessionViewer.py  __init__.py  __main__.py  app_logger.py  auto-py-to-exe_config.json  auto-py-to-exe_config_demo_server.json  check_sum  check_sum.py  check_sum_installed  check_sum_installed.py  client  client.py  config.json  connections_settings.py  connections_settings.ui  generate_locale.bat  main.py  mainwindow.py  mainwindow.ui  new_session_window.py  new_session_window.ui  pylintrc  pyproject.toml  requirements.txt  ru-eng.qm  sensor_commands.py  session_viewer.py  session_viewer.ui  ui_to_py.bat  utils.py  windows_install_packet.bat  (+1 more)
.github/: main.yaml
.history/: .gitignore_20221107171731
Config/: config.yaml
SMEF/: Config.py  NewSession.py  SessionViewer.py  __init__.py  custom_threading.py  double_range_slider.py  generate_binary_locale.bat  generator_window.py  generator_window.ui  new_session_window.py  session_viewer.py  ui_to_py.bat
output/: 2021-07-26_11.42.csv  2021-07-26_11.45.csv  2021-07-26_16.52.csv  2021-07-26_16.54.csv  2021-08-02_09.24.csv  2021-08-02_09.44.csv  2021-08-02_13.23.csv  2021-08-02_13.27.csv  2021-08-02_13.29.csv  2021-08-02_13.52.csv
sensor_calibrations/: 00357217.ar  00357221.ar  Probe03_2021 (1).txt
smef/: Config.py  ConnectionsSettings.py  CustomPlot.py  GeneratorSettings.py  NewSession.py  SessionViewer.py  __init__.py  __main__.py  app_logger.py  auto-py-to-exe_config.json  check_hash  connections_settings.py  connections_settings.ui  custom_threading.py  demo_server.py  double_range_slider.py  generate_locale.bat  mainwindow.py  mainwindow.ui  new_session_window.py  new_session_window.ui  pyproject.toml  requirements.txt  ru-eng.qm  ru-eng.ts  sensor_commands.py  session_viewer.py  session_viewer.ui  start  to_exe.py  utils.py
smef/PlotterWidget/: CustomPlot.py  plotter_widget.ui
smef/client/: main.py  main_widget.py  new_session.py  pandasModel.py  settings_widget.py  viewer.py
smef/client/custom_plot/: CustomPlot.py  plotter_style.py
smef/client/ui/: connections_settings.ui  main.ui  mainwidget.ui  new_session_window.ui  viewer.ui
smef/connection_settings/: ConnectionsSettings.py  connections_settings.ui
smef/custom_plot/: CustomPlot.py  custom_plot.ui
smef/fi7000_interface/: backend.py  background.py  calibrations.py  config.py  fl7000_driver.py  fl7000_intterface_driver.py  fl7040_driver.py  mainwidget.ui  mainwindow.ui  pandasModel.py  session_viewer.py  simple_socket_terminal.py
smef/fi7000_interface/Config/: config.yaml
smef/generator_window/: GeneratorSettings.py
smef/main_window/: main_window.py  mainwindow.ui
smef/new_session/: NewSession.py  new_session_window.ui
smef/sensor_calibrations/: 00357218.ar  00357219.ar  00357220.ar  0357218.txt  0357219.txt  Probe03_2021 (2).txt  Probe03_2021 (3).txt  Probe03_2021.txt
smef/session_viewer/: SessionViewer.py  name.py  session_viewer.ui
(+2 files in other folders)
