[tool.poetry]
name = "smef"
version = "0.7.5"
description = "graphical interface for electric field monitoring system"
authors = ["crinitusfeles <crinitusfeles@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3"
PyQt5 = "^5.15"
pyqtgraph = "^0.12"
numpy = "^1.21"
coloredlogs = "^15.0"
qdarkstyle = "^3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_variable = [
    "smef/__init__.py:__version__",
    "pyproject.toml:version"
]
branch = "main"
upload_to_pypi = false
upload_to_release = true
build_command = "pip install poetry && poetry build"
