[tool.poetry]
name = "smef"
version = "0.7.5"
description = "graphical interface for electric field monitoring system"
authors = ["crinitusfeles <crinitusfeles@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
filehash = "^0.2.dev1"
numpy = "^1.25.2"
pandas = "^2.1.0"
pyqtgraph = "^0.13.3"
coloredlogs = "^15.0.1"
qdarkstyle = "^3.1"
qtmodern = "^0.2.0"
ruamel-yaml = "0.17.1"
loguru = "^0.7.1"
dynaconf = "^3.2.3"
pyqt6 = "^6.6.1"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
auto-py-to-exe = "^2.40.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_variable = [
    "smef/__init__.py:__version__",
    "pyproject.toml:version"
]
branch = "main"
upload_to_pypi = false
upload_to_release = true
build_command = "pip install poetry && poetry build"

[tool.ruff]
line-length = 120
select = ["E", "F", "PL"]
ignore = ["PLR2004", "PLR0913"]