[tool.poetry]
name = "smef"
version = "0.7.5"
description = "graphical interface for electric field monitoring system"
authors = ["crinitusfeles <crinitusfeles@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
filehash = "^0.2.dev1"
pyqtgraph = "^0.13.3"
qtmodern = "^0.2.0"
loguru = "^0.7.1"
dynaconf = "^3.2.3"
pyqt6 = "^6.7.1"
pandas = "^2.2.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_variable = [
    "smef/__init__.py:__version__",
    "pyproject.toml:version"
]
branch = "main"
upload_to_pypi = false
upload_to_release = true
build_command = "pip install poetry && poetry build"

[tool.ruff]
line-length = 120
select = ["E", "F", "PL"]
ignore = ["PLR2004", "PLR0913"]