[tool.poetry]
name = "smef"
version = "0.1.0"
description = ""
authors = ["Dmitry Romanov <crinitusfeles@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
PyQt5 = "^5.15.7"
pyqtgraph = "^0.12.4"
"ruamel.yaml" = "^0.17.21"
qtmodern = "^0.2.0"
QDarkStyle = "^3.1"
pandas = "^1.4.3"
numpy = "^1.23.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
